@@ -48,18 +48,7 @@
         <constraints>
 		<condition name='hidden_if_in' source='agregation'>
 			<param>non</param> 
-			<target type='variable'>ag_force_eth0</target>
-			<target type='variable'>ag_dns_eth0</target>
-			<target type='variable'>ag_weight_eth0</target>
-			<target type='variable'>ag_force_eth0_0</target>
-			<target type='variable'>ag_dns_eth0_0</target>
-			<target type='variable'>ag_weight_eth0_0</target>
-			<target type='variable'>ag_pause</target>
-			<target type='variable'>ag_timeout</target>
-			<target type='variable'>ag_testdns</target>
-			<target type='variable'>ag_testdns2</target>
-			<target type='variable'>ag_nbsucces</target>
-			<target type='variable'>ag_nbechecs</target>
+			<target type='family'>Agregation</target>
 			<target type='filelist'>agregation</target>
 		</condition>
 		<check name="valid_enum" target='agregation'>
